--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
