--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title></title>
   </head>
   <body>
+<div class="container-fluid mt-3">
+  <h1>Welcome</h1>
+  <div class="row">
+    <div class="col p-3 bg-dark text-white">#live</div>
+    <div class="col p-3 bg-light text-dark">#love</div>
+    <div class="col p-3 bg-dark text-white">#laugh</div>
+  </div>
+  <div class="row">
+    <div class="col p-3 bg-light text-dark">gatekeep</div>
+    <div class="col p-3 bg-dark text-light">gaslight</div>
+    <div class="col p-3 bg-light text=dark">girldboss</div>
+  </div>
+</div>
+
 
   </body>
 </html>
