--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
     <div class="col p-3 bg-dark text-light">gaslight</div>
     <div class="col p-3 bg-light text=dark">girldboss</div>
   </div>
+  <div class="row">
+    <div class="col p-3 bg-dark text-white">scream</div>
+    <div class="col p-3 bg-light text-dark">shout</div>
+    <div class="col p-3 bg-dark text-white">let it all out</div>
+  </div>
 </div>
-
-
+<div class="alert alert-success">
+  <button><strong>Success!</strong> You should <a href="#slay" class="alert-link">read this message</a>.</buton>
+</div>
+<p id="slay">SLAYYYYYYYY</p>
   </body>
 </html>
