--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title></title>
+    <title>Bootstrap</title>
   </head>
   <body>
 <div class="container-fluid mt-3">
-  <h1>Welcome</h1>
-  <div class="row">
-    <div class="col p-3 bg-dark text-white">#live</div>
-    <div class="col p-3 bg-light text-dark">#love</div>
-    <div class="col p-3 bg-dark text-white">#laugh</div>
-  </div>
-  <div class="row">
-    <div class="col p-3 bg-light text-dark">gatekeep</div>
-    <div class="col p-3 bg-dark text-light">gaslight</div>
-    <div class="col p-3 bg-light text=dark">girldboss</div>
-  </div>
-  <div class="row">
-    <div class="col p-3 bg-dark text-white">scream</div>
-    <div class="col p-3 bg-light text-dark">shout</div>
-    <div class="col p-3 bg-dark text-white">let it all out</div>
+  <h1 class="display-1">Welcome</h1>
+  <div class="row" id="nav">
+    <div id="buttons" class="col p-3 bg-dark text-white">#live</div>
+    <div id="buttons" class="col p-3 bg-light text-dark">#love</div>
+    <div id="buttons" class="col p-3 bg-dark text-white">#laugh</div>
+    <div id="buttons" class="col p-3 bg-light text-dark">gatekeep</div>
+    <div id="buttons" class="col p-3 bg-dark text-light">gaslight</div>
+    <div id="buttons" class="col p-3 bg-light text=dark">girldboss</div>
   </div>
 </div>
-<div class="alert alert-success">
-  <button><strong>Success!</strong> You should <a href="#slay" class="alert-link">read this message</a>.</buton>
+<br>
+<div class="row" id="info">
+  <div class="col-sm-4">
+    <h2 class="display-5"> Qoute</h2>
+      <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+  </div>
+  <div class="col-sm-8">
+    <h2 class="display-5">Translation</h2>
+    <blockquote class="blockquote">
+      <p class="qoute">"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"</p>
+     <footer class="blockquote-footer">Richard McClintock</footer>
+    </blockquote>
+  </div>
 </div>
-<p id="slay">SLAYYYYYYYY</p>
+<div class="container mt-3"
   </body>
 </html>
