--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
     </blockquote>
   </div>
 </div>
-<div class="container mt-3"
+<div class="container mt-3">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Years</th>
+        <th>What happened?</th>
+      </tr>
+    </thread>
+    <tbody>
+      <tr>
+        <td>2020</td>
+        <td>covid :(</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td>SLAYYYYYY</td>
+      </tr>
+      <tr>
+        <td>2022</td>
+        <td>waiting...</td>
+    </tbody>
+  </table>
+</div>
+
+
   </body>
 </html>
