--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   </div>
 </div>
 <br>
+<div class="mt-4 p-5 bg-light text-dark rounded">
+  <h2>Welcome to my page!</h2>
+  <p> I hope you enjoy all of the coding and format created on this page!</p>
+</div>
+<br>
 <div class="row" id="info">
   <div class="col-sm-4">
     <h2 class="display-5"> Qoute</h2>
@@ -55,6 +60,48 @@
         <td>waiting...</td>
     </tbody>
   </table>
+</div>
+<br>
+<div class="container mt-3">
+<div class="alert alert-secondary alert-dismissible fade show">
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+  <strong> Hey you!</strong> be sure to check everything on this page out!
+</div>
+</div>
+
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col p-6-md">
+      <img src="images\athens.jpg" class="img-thumbnail" alt="athens, greece">
+    </div>
+    <div class="col p-6-md">
+      <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images\ocean.jpg" alt="Ocean picture" class="d-block" style="width:100%">
+          </div>
+          <div class="carousel-item">
+            <img src="images\palm.jpg" alt="palm" class="d-block" style="width:100%">
+          </div>
+          <div class="carousel-item">
+            <img src="images\sunset.jpg" alt="sunset" class="d-block" style="width:100%">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
 
 
