--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br>
 <div class="mt-4 p-5 bg-light text-dark rounded">
   <h2>Welcome to my page!</h2>
-  <p> I hope you enjoy all of the coding and format created on this page!</p>
+  <p> I hope you enjoy all of the coding and format created on this page!  This page was made to test out the bootstrap progam, so practicing code and desgin at the same time. The color schemes, and images were all choosen to go along with the pages nice format!</p>
 </div>
 <br>
 <div class="row" id="info">
