started creating an offcanvas

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <div id="buttons" class="col p-3 bg-light text-dark">#love</div>
     <div id="buttons" class="col p-3 bg-dark text-white">#laugh</div>
     <div id="buttons" class="col p-3 bg-light text-dark">gatekeep</div>
-    <div id="buttons" class="col p-3 bg-dark text-light">gaslight</div>
-    <div id="buttons" class="col p-3 bg-light text=dark">girldboss</div>
+    <div id="buttons" class="col p-3 bg-dark text-light">girldboss</div>
+    <div id="buttons" class="col p-3 bg-light text=dark">
+      <div class="offcanvas offcanvas-top" id="demo">
+        <div class="offcanvas-header">
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <br>
