--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
       <div class="offcanvas offcanvas-top" id="demo">
         <div class="offcanvas-header">
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+          <div class="offcanvas-body">
+            <p>Latin is cool.</p>
+          </div>
         </div>
       </div>
+      <div class="container-fluid mt-3"
     </div>
   </div>
 </div>
@@ -107,6 +111,29 @@
         </button>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col p-1-sm">
+        <button type="button" class="btn btn-outline-dark">Click on me!</button>
+    </div>
+    <div class="col p-1-sm">
+      <button class="btn btn-dark">
+        <span class="spinner-border spinner-border-sm"></span>Loading...
+      </button>
+    </div>
+    <div class="col p-6-sm">
+      <div class="btn-group">
+        <button type="button" class="btn btn-outline-dark"> Italy </button>
+        <button type="button" class="btn btn-outline-dark"> Greece </button>
+        <div class="btn-group">
+          <button type="button" class="btn btn-outline-dark dropdown-toggle" data-bs-toggle="dropdown"> United Kingdom </button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href=""> Britian</a>
+            <a class="dropdown-item" href=""> Ireland</a>
+    </diV>
   </div>
 </div>
 
