created the modal

--- a/index.html
+++ b/index.html
@@ -16,20 +16,32 @@
     <div id="buttons" class="col p-3 bg-dark text-white">#laugh</div>
     <div id="buttons" class="col p-3 bg-light text-dark">gatekeep</div>
     <div id="buttons" class="col p-3 bg-dark text-light">girldboss</div>
+
     <div id="buttons" class="col p-3 bg-light text=dark">
-      <div class="offcanvas offcanvas-top" id="demo">
-        <div class="offcanvas-header">
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-          <div class="offcanvas-body">
-            <p>Latin is cool.</p>
+      <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#myModal">Click here!</button>
+      <div class="modal" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title"> Hello There!</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              Latin insipired many other languages! These include but are not limited to Spanish, English, Italian, and French!
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container-fluid mt-3"
     </div>
+
   </div>
 </div>
+
 <br>
+
 <div class="mt-4 p-5 bg-light text-dark rounded">
   <h2>Welcome to my page!</h2>
   <p> I hope you enjoy all of the coding and format created on this page!  This page was made to test out the bootstrap progam, so practicing code and desgin at the same time. The color schemes, and images were all choosen to go along with the pages nice format!</p>
