--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="buttons" class="col p-3 bg-light text-dark">#love</div>
     <div id="buttons" class="col p-3 bg-dark text-white">#laugh</div>
     <div id="buttons" class="col p-3 bg-light text-dark">gatekeep</div>
-    <div id="buttons" class="col p-3 bg-dark text-light">girldboss</div>
+    <div id="buttons" class="col p-3 bg-dark text-light">girlboss</div>
 
     <div id="buttons" class="col p-3 bg-light text=dark">
       <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#myModal">Click here!</button>
