created badges and progress bars

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
@@ -129,12 +128,18 @@
 <div class="container-fluid mt-3">
   <div class="row">
     <div class="col p-1-sm">
-        <button type="button" class="btn btn-outline-dark">Click on me!</button>
+        <button type="button" class="btn btn-outline-dark">
+          Click on me!
+          <span class="badge bg-secondary">Or dont</span>
+        </button>
     </div>
     <div class="col p-1-sm">
       <button class="btn btn-dark">
         <span class="spinner-border spinner-border-sm"></span>Loading...
       </button>
+    </div>
+    <div class="col p-1 sm">
+      <span class="badge bg-secondary">SLAYYYYYYYY</span>
     </div>
     <div class="col p-6-sm">
       <div class="btn-group">
@@ -145,10 +150,26 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href=""> Britian</a>
             <a class="dropdown-item" href=""> Ireland</a>
-    </diV>
+          </diV>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
+<br>
+
+<div class="container-fluid mt 3">
+  <div class="progress" style="height:10px">
+    <div class="progress-bar bg-dark" style="width:25%"></div>
+    <div class="progress-bar bg-secondary" style="width:25%"></div>
+    <div class="progress-bar bg-white" style="width:25%"></div>
+  </div>
+  <br>
+  <div class="progress">
+    <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" style="width:40%"></div>
+  </div>
+</div>
 
   </body>
 </html>
