--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
 <div class="container-fluid mt-3">
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -33,6 +33,7 @@
     </div>
   </nav>
 </div>
+</br>
 
 <div class="container-fluid mt-3">
   <h1 class="display-1">Welcome</h1>
