--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="row">
     <div class="col p-1-sm">
         <button type="button" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="YAYYYYYYYYYYYYYY!">
-          Click on me!
+          Hover over me!
           <span class="badge bg-secondary">Or dont</span>
         </button>
     </div>
