--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <div class="container-fluid mt-3">
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)">Home</a>
+      <a class="navbar-brand" href="javascript:void(0)"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">Contact</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">About Me</a>
+            <a class="nav-link" href="index1.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index2.html">About Me</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -152,37 +155,7 @@
   </div>
 </div>
 
-<div class="container-fluid mt-3">
-  <div class="row">
-    <div class="col p-1-sm">
-        <button type="button" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="YAYYYYYYYYYYYYYY!">
-          Hover over me!
-          <span class="badge bg-secondary">Or dont</span>
-        </button>
-    </div>
-    <div class="col p-1-sm">
-      <button class="btn btn-dark">
-        <span class="spinner-border spinner-border-sm"></span>Loading...
-      </button>
-    </div>
-    <div class="col p-1 sm">
-      <span class="badge bg-secondary">SLAYYYYYYYY</span>
-    </div>
-    <div class="col p-6-sm">
-      <div class="btn-group">
-        <button type="button" class="btn btn-outline-dark"> Italy </button>
-        <button type="button" class="btn btn-outline-dark"> Greece </button>
-        <div class="btn-group">
-          <button type="button" class="btn btn-outline-dark dropdown-toggle" data-bs-toggle="dropdown"> United Kingdom </button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href=""> Britian</a>
-            <a class="dropdown-item" href=""> Ireland</a>
-          </diV>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 <br>
 
@@ -198,11 +171,26 @@
   </div>
 </div>
 
-<script>
-var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-  return new bootstrap.Tooltip(tooltipTriggerEl)
-})
-</script>
+<div class="container mt-3">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      <a class="page-link" href="index.html">Previous</a>
+    </li>
+    <li class="page-item active">
+      <a class="page-link" href="index.html">1</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="index1.html">2</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="index2.html">3</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="index2.html">Next</a>
+    </li>
+  </ul>
+</div>
+
+
   </body>
 </html>
