--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Bootstrap</title>
+    <title>SLAYYYYYYYYY</title>
   </head>
   <body>
 
@@ -37,7 +37,29 @@
       </nav>
     </div>
 <br>
-
+<br>
+<div class="container mt-3">
+  <h1> Girlboss Girls</h1>
+  <div class="row">
+    <div class="col p-3">
+      <div class="card" style="width:400px">
+        <img class="card-img-top" src="images\shay.jpg" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Shay Mitchell</h4>
+          <p class="card-text">Shay is one of the ultimate girlbosses because of her iconic acting carreer. Also Michelle loves her so she is obvi iconic.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col p-3">
+      <img class="card-img-top" src="images\taylor.jpg" alt="Card image" style="width:100%">
+      <div class="card-body">
+        <h4 class="card-title">Taylor Swift</h4>
+        <p class="card-text">Taylor is the music industry and is iconic as well. She is amazing and got accepted into NYU!</p>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
 <div class="container mt-3">
   <ul class="pagination justify-content-center">
     <li class="page-item">
