--- a/index2.html
+++ b/index2.html
@@ -51,10 +51,21 @@
       </div>
     </div>
     <div class="col p-3">
+      <div class="card" style="width:400px">
       <img class="card-img-top" src="images\taylor.jpg" alt="Card image" style="width:100%">
       <div class="card-body">
         <h4 class="card-title">Taylor Swift</h4>
         <p class="card-text">Taylor is the music industry and is iconic as well. She is amazing and got accepted into NYU!</p>
+      </div>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="card" style="width:400px">
+      <img class="card-img-top" src="images\allyson.jpg" alt="Card image" style="width:100%">
+      <div class="card-body">
+        <h4 class="card-title">Allyson Felix</h4>
+        <p class="card-text">Allyson is a very speedy girl and one of the many girlbosses in track. Also, she is one of Emma's fav runners besides Craig Engels.</p>
+      </div>
       </div>
     </div>
   </div>
