--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 <br>
 <br>
 <div class="container mt-3">
-  <h1> Girlboss Girls</h1>
+  <h1 class="display-1"> Girlboss Girls</h1>
   <div class="row">
     <div class="col p-3">
       <div class="card" style="width:400px">
@@ -47,6 +47,7 @@
         <div class="card-body">
           <h4 class="card-title">Shay Mitchell</h4>
           <p class="card-text">Shay is one of the ultimate girlbosses because of her iconic acting carreer. Also Michelle loves her so she is obvi iconic.</p>
+          <a target="_blank" href="https://en.wikipedia.org/wiki/Shay_Mitchell" class="btn btn-dark">Go to her wikipedia!</a>
         </div>
       </div>
     </div>
@@ -56,6 +57,7 @@
       <div class="card-body">
         <h4 class="card-title">Taylor Swift</h4>
         <p class="card-text">Taylor is the music industry and is iconic as well. She is amazing and got accepted into NYU!</p>
+        <a target="_blank" href="https://www.taylorswift.com/" class="btn btn-dark">Go to her website!</a>
       </div>
       </div>
     </div>
@@ -65,6 +67,7 @@
       <div class="card-body">
         <h4 class="card-title">Allyson Felix</h4>
         <p class="card-text">Allyson is a very speedy girl and one of the many girlbosses in track. Also, she is one of Emma's fav runners besides Craig Engels.</p>
+        <a target="_blank" href="https://www.teamusa.org/usa-track-and-field/athletes/allyson-felix" class="btn btn-dark">Go to her Team USA Profile!</a>
       </div>
       </div>
     </div>
