--- a/index1.html
+++ b/index1.html
@@ -88,7 +88,27 @@
     </div>
   </div>
 </div>
-
+<br>
+<div class="container mt-3">
+  <ul class="list-group">
+    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
+      SLAYYYYYY
+      <span class="badge bg-dark rounded-pills">28</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
+      Ayo?
+      <span class="badge bg-dark rounded-pills">17</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
+      You're a puddle.
+      <span class="badge bg-dark rounded-pills">10</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
+      nyAAAAAAAAAA
+      <span class="badge bg-dark rounded-pills">22</span>
+    </li>
+  </ul>
+</div>
 <br>
 <div class="container mt-3">
   <ul class="pagination justify-content-center">
