more button work

--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
       <img class="card-img-top" src="images\taylor.jpg" alt="Card image" style="width:100%">
       <div class="card-body">
         <h4 class="card-title">Taylor Swift</h4>
-        <p class="card-text">Taylor is the music industry and is iconic as well. She is amazing and got accepted into NYU!</p>
+        <p class="card-text">Taylor is the music industry and is iconic as well. She is amazing she just got her own class at NYU!</p>
         <a target="_blank" href="https://www.taylorswift.com/" class="btn btn-dark">Go to her website!</a>
       </div>
       </div>
