--- a/index1.html
+++ b/index1.html
@@ -81,6 +81,17 @@
 </div>
 <div class="container-fluid mt-3">
   <div class="row">
+    <div class="col p-1 sm">
+    <div class="dropdown dropend">
+      <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">Click Here</button>
+      <ul class="dropdown-menu">
+        <li> <a class="dropdown-item" href="#">ayo</a></li>
+        <li> <a class="dropdown-item" href="#">aYo</a></li>
+        <li> <a class="dropdown-item" href="#">aYO</a></li>
+        <li> <a class="dropdown-item" href="#">AYO</a></li>
+      </ul>
+    </div>
+  </div>
     <div class="col p-1-sm">
         <button type="button" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="YAYYYYYYYYYYYYYY!">
           Hover over me!
@@ -106,6 +117,17 @@
             <a class="dropdown-item" href=""> Ireland</a>
           </diV>
         </div>
+      </div>
+    </div>
+    <div class="col p-1 sm">
+      <div class="dropdown dropstart text-end">
+        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown"> Click #here</button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">slay</a></li>
+          <li><a class="dropdown-item" href="#">slayy</a></li>
+          <li><a class="dropdown-item" href="#">slayyy</a></li>
+          <li><a class="dropdown-item" href="#">slayyyy</a></li>
+        </ul>
       </div>
     </div>
   </div>
