--- a/index1.html
+++ b/index1.html
@@ -98,11 +98,6 @@
           <span class="badge bg-secondary">Or dont</span>
         </button>
     </div>
-    <div class="col p-1-sm">
-      <button class="btn btn-dark">
-        <span class="spinner-border spinner-border-sm"></span>Loading...
-      </button>
-    </div>
     <div class="col p-1 sm">
       <span class="badge bg-secondary">SLAYYYYYYYY</span>
     </div>
@@ -133,6 +128,67 @@
   </div>
 </div>
 <br>
+<div class="container-fluid mt-3">
+  <button class="btn btn-dark" type="button" data-bs-toggle="collapse" data-bs-target="#demo">
+    <span class="spinner-border spinner-border-sm"></span>Loading...
+    </button>
+    <div id="demo" class="collapse">
+      Follow me home, if you dare to
+I wouldn't know where to lead you
+Should I take chances
+When no one took chances on me
+So, I watch from the dark
+Wait for my life to start
+With no beauty in my memory
+All that I wanted was to be wanted
+Too young to wander London streets
+Alone and haunted
+Born into nothing
+At least you have something
+Something to cling to
+Visions of dazzling rooms
+I'll never get let into
+And the memories were lost long ago
+But at least you have beautiful ghosts
+Perilous night, their voices calling
+A flicker of light, before the dawning
+Out here the wild ones
+Are taming the fear within me
+Scared to call them my friends
+And be broken again
+Is this hope just a mystical dream
+All that I wanted was to be wanted
+Too young to wander London streets
+Alone and haunted
+Born into nothing
+At least you have something
+Something to cling to
+Visions of dazzling rooms
+I'll never get let into
+And the memories were lost long ago
+But at least you have beautiful ghosts
+And so maybe my home
+Isn't what I had known
+What I thought it would be
+But I feel so alive
+With these phantoms of night
+And I know that this life isn't safe
+But it's wild and it's free
+All that I wanted was to be wanted
+I'll never wander London streets
+Alone and haunted
+Born into nothing
+With them I have something
+Something to cling to
+I never knew I'd love
+This world they've let me into
+And the memories were lost long ago
+So I'll dance with these beautiful ghosts
+And the memories were lost long ago
+So I'll dance with these beautiful ghosts
+    </div>
+</div>
+<br>
 <div class="container mt-3">
   <ul class="list-group">
     <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
@@ -155,6 +211,117 @@
 </div>
 <br>
 <div class="container mt-3">
+  <div id="accordion">
+
+  <div class="card">
+    <div class="card-header">
+      <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+        Mater tibi
+      </a>
+    </div>
+    <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+      <div class="card-body">
+        I know that I'm a handful, baby, uh
+I know I never think before I jump
+And you're the kind of guy the ladies want
+(And there's a lot of cool chicks out there)
+I know that I went psycho on the phone
+I never leave well enough alone
+And trouble's gonna follow where I go
+(And there's a lot of cool chicks out there)
+But one of these things is not like the others
+Like a rainbow with all of the colors
+Baby doll, when it comes to a lover
+I promise that you'll never find another like
+Me-e-e, ooh-ooh-ooh-ooh
+I'm the only one of me
+Baby, that's the fun of me
+Eeh-eeh-eeh, ooh-ooh-ooh-ooh
+You're the only one of you
+Baby, that's the fun of you
+And I promise that nobody's gonna love you like me-e-e
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
+        ego sum fessus
+      </a>
+    </div>
+    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+      <div class="card-body">
+        I'm like the water when your ship rolled in that night
+Rough on the surface but you cut through like a knife
+And if it was an open-shut case
+I never would've known from that look on your face
+Lost in your current like a priceless wine
+The more that you say
+The less I know
+Wherever you stray
+I follow
+I'm begging for you to take my hand
+Wreck my plans
+That's my man
+Life was a willow and it bent right to your wind (oh)
+Head on the pillow, I could feel you sneaking in
+As if you were a mythical thing
+Like you were a trophy or a champion ring
+And there was one prize I'd cheat to win
+The more that you say
+The less I know
+Wherever you stray
+I follow
+I'm begging for you to take my hand
+Wreck my plans
+That's my man
+You know that my train could take you home
+Anywhere else is hollow
+I'm begging for you to take my hand
+Wreck my plans
+That's my man
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+        illa est dixit
+      </a>
+    </div>
+    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+      <div class="card-body">
+        State the obvious, I didn't get my perfect fantasy
+        I realize you love yourself more than you could ever love me
+        So go and tell your friends that I'm obsessive and crazy
+        That's fine, you won't mind if I say
+        By the way
+        I hate that stupid old pickup truck you never let me drive
+        You're a redneck heartbreak who's really bad at lying
+        So watch me strike a match on all my wasted time
+        As far as I'm concerned, you're just another picture to burn
+        There's no time for tears
+        I'm just sitting here planning my revenge
+        There's nothing stopping me
+        From going out with all of your best friends
+        And if you come around saying sorry to me
+        My daddy's gonna show you how sorry you'll be
+        'Cause I hate that stupid old pickup truck you never let me drive
+        You're a redneck heartbreak who's really bad at lying
+        So watch me strike a match on all my wasted time
+        As far as I'm concerned, you're just another picture to burn
+        And if you're missing me, you'd better keep it to yourself
+        'Cause coming back around here would be bad for your health
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
+<br>
+<div class="container mt-3">
   <ul class="pagination justify-content-center">
     <li class="page-item">
       <a class="page-link" href="index.html">Previous</a>
@@ -173,7 +340,7 @@
     </li>
   </ul>
 </div>
-
+</div>
 <script>
 var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
 var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
