edited accordian and form

--- a/index1.html
+++ b/index1.html
@@ -57,7 +57,7 @@
   </div>
 </div>
 <div class="container-fluid mt-3">
-  <form action="/action_page.php" class="was-validated">
+  <form action="/action_page.php">
     <div class="mb-3 mt-3">
       <label for="uname" class="form-label">Your Name:</label>
       <input type="text" class="form-control" id="uname" placeholder="Enter your name" name="uname" required>
@@ -65,7 +65,7 @@
       <div class="invalid-feedback">Please put in your name.</div>
     </div>
     <div class="mb-3">
-      <label for="pwd" class="form-control" id="pwd" placeholder="Enter password" Name="pswd" required>Password:</label>
+      <label for="pwd" class="form-label">Password:</label>
       <input type="password" class="form-control" id="pwd" placeholder="Enter Password" name="pswd" required>
       <div class="valid-feedback">Valid.</div>
       <div class="invalid-feedback"> Please put in your password.</div>
@@ -212,7 +212,6 @@ So I'll dance with these beautiful ghosts
 <br>
 <div class="container mt-3">
   <div id="accordion">
-
   <div class="card">
     <div class="card-header">
       <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
@@ -243,7 +242,6 @@ And I promise that nobody's gonna love you like me-e-e
       </div>
     </div>
   </div>
-
   <div class="card">
     <div class="card-header">
       <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
@@ -284,7 +282,6 @@ That's my man
       </div>
     </div>
   </div>
-
   <div class="card">
     <div class="card-header">
       <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
@@ -317,7 +314,40 @@ That's my man
       </div>
     </div>
   </div>
-
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+        salve dominarum et iudices
+      </a>
+    </div>
+    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+      <div class="card-body">
+        Rebekah rode up on the afternoon train
+        It was sunny
+        Her saltbox house on the coast
+        Took her mind off St. Louis
+        Bill was the heir to the Standard Oil name and money
+        And the town said, "How did a middle-class divorcée do it?"
+        The wedding was charming, if a little gauche
+        There's only so far new money goes
+        They picked out a home and called it "Holiday House"
+        Their parties were tasteful, if a little loud
+        The doctor had told him to settle down
+        It must have been her fault his heart gave out
+        And they said
+        "There goes the last great American dynasty"
+        "Who knows if she never showed up, what could've been"
+        "There goes the maddest woman this town has ever seen"
+        "She had a marvelous time ruinin' everything"
+        Rebekah gave up on the Rhode Island set
+        Forever
+        Flew in all her Bitch Pack friends from the city
+        Filled the pool with champagne and swam with the big names
+        And blew through the money on the boys and the ballet
+        And losin' on card game bets with Dalí
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 <br>
