--- a/index1.html
+++ b/index1.html
@@ -316,11 +316,11 @@ That's my man
   </div>
   <div class="card">
     <div class="card-header">
-      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseFour">
         salve dominarum et iudices
       </a>
     </div>
-    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+    <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
         Rebekah rode up on the afternoon train
         It was sunny
@@ -341,7 +341,7 @@ That's my man
         "She had a marvelous time ruinin' everything"
         Rebekah gave up on the Rhode Island set
         Forever
-        Flew in all her Bitch Pack friends from the city
+        Flew in all her ***** Pack friends from the city
         Filled the pool with champagne and swam with the big names
         And blew through the money on the boys and the ballet
         And losin' on card game bets with Dalí
