--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <div class="container-fluid mt-3">
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="#">
+        <img src="images\porcupine.png" alt="logo" style="width:40px;" class="rounded-pill">
+      </a>
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
