--- a/index2.html
+++ b/index2.html
@@ -18,13 +18,13 @@
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="index1.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index2.html">About Me</a>
+                <a class="nav-link active" href="index2.html">About Me</a>
               </li>
             </ul>
             <form class="d-flex">
