--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,17 @@
     </div>
 <br>
 <br>
+
+
+<div class="container mt-3">
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked onclick="myFunction()">
+    <label class="form-check-label" for="mySwitch">Light Mode</label>
+  </div>
+</div>
+
+
+<br>
 <div class="container mt-3">
   <h1 class="display-1"> Girlboss Girls</h1>
   <div class="row">
@@ -92,5 +103,11 @@
     </li>
   </ul>
 </div>
+<script>
+function myFunction() {
+  var element = document.body;
+  element.classList.toggle("dark-mode");
+}
+</script>
 </body>
 </html>
