--- a/index2.html
+++ b/index2.html
@@ -26,6 +26,14 @@
               <li class="nav-item">
                 <a class="nav-link active" href="index2.html">About Me</a>
               </li>
+              <li class="nav-item">
+                <div class="container mt-3">
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked onclick="myFunction()">
+                    <label class="form-check-label" for="mySwitch">Light Mode</label>
+                  </div>
+                </div>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="Type Here">
@@ -36,17 +44,6 @@
       </nav>
     </div>
 <br>
-<br>
-
-
-<div class="container mt-3">
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked onclick="myFunction()">
-    <label class="form-check-label" for="mySwitch">Light Mode</label>
-  </div>
-</div>
-
-
 <br>
 <div class="container mt-3">
   <h1 class="display-1"> Girlboss Girls</h1>
