--- a/index.html
+++ b/index.html
@@ -75,6 +75,52 @@
   <p> I hope you enjoy all of the coding and format created on this page!  This page was made to test out the bootstrap progam, so practicing code and desgin at the same time. The color schemes, and images were all choosen to go along with the pages nice format!</p>
 </div>
 <br>
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col p-6-md">
+      <img src="images\athens.jpg" class="img-thumbnail" alt="athens, greece">
+    </div>
+    <div class="col p-6-md">
+      <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images\ocean.jpg" alt="Ocean picture" class="d-block" style="width:100%">
+            <div class="carousel-caption">
+              <h3> Beachy pictures!</h3>
+              <p> If a city does not sound like a good place to go, try a beachy scene!</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images\palm.jpg" alt="palm" class="d-block" style="width:100%">
+            <div class="carousel-caption">
+              <h3> Nice Palm Trees!</h3>
+              <p> Under the pretty paml tress and cool breeze!</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images\sunset.jpg" alt="sunset" class="d-block" style="width:100%">
+            <div class="carousel-caption">
+              <h3> Sunet at the Beach!</h3>
+              <p> Watching the sunset can be so relaxing!</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
 <div class="row" id="info">
   <div class="col-sm-4">
     <h2 class="display-5"> Qoute</h2>
@@ -117,42 +163,7 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <strong> Hey you!</strong> be sure to check everything on this page out!
 </div>
-</div>
-
-<div class="container-fluid mt-3">
-  <div class="row">
-    <div class="col p-6-md">
-      <img src="images\athens.jpg" class="img-thumbnail" alt="athens, greece">
-    </div>
-    <div class="col p-6-md">
-      <div id="demo" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-        </div>
-
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images\ocean.jpg" alt="Ocean picture" class="d-block" style="width:100%">
-          </div>
-          <div class="carousel-item">
-            <img src="images\palm.jpg" alt="palm" class="d-block" style="width:100%">
-          </div>
-          <div class="carousel-item">
-            <img src="images\sunset.jpg" alt="sunset" class="d-block" style="width:100%">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+</div
 
 <br>
 
