--- a/index2.html
+++ b/index2.html
@@ -46,6 +46,38 @@
 <br>
 <br>
 <div class="container mt-3">
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="1" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="2" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="3" class="active"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images\girl.jpg" alt="girlboss" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="images\boss.jpg" alt="bosses" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="images\cover.jpg" alt="magazine cover" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="images\ggg.jpg" alt="the 3 gs" class="d-block" style="width:100%">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+       <span class="carousel-control-prev-icon"></span>
+     </button>
+     <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+  </div>
+</div>
+<br>
+<br>
+<div class="container mt-3">
   <h1 class="display-1"> Girlboss Girls</h1>
   <div class="row">
     <div class="col p-3">
