--- a/index1.html
+++ b/index1.html
@@ -37,6 +37,35 @@
     </div>
 <br>
 <br>
+<div class="container mt-3">
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="1" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="2" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="3" class="active"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images\rome.jpg" alt="map" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="images\empire.jpg" alt="building" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="images\army.jpg" alt="roman army" class="d-block" style="width:100%">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+       <span class="carousel-control-prev-icon"></span>
+     </button>
+     <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+  </div>
+</div>
+<br>
+<br>
 <div class="container-fluid mt-3">
   <h1>Contact Infromation</h1>
   <div class="row">
