--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
         <img src="images\boss.jpg" alt="bosses" class="d-block" style="width:100%">
       </div>
       <div class="carousel-item">
-        <img src="images\cover.jpg" alt="magazine cover" class="d-block" style="width:100%">
+        <img src="images\cover.jpg" alt="magazine cover" class="d-block" id="cover" style="width:100%">
       </div>
       <div class="carousel-item">
         <img src="images\ggg.jpg" alt="the 3 gs" class="d-block" style="width:100%">
