--- a/index1.html
+++ b/index1.html
@@ -78,10 +78,27 @@
         Loading..
       </button>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-1">
       <div class="spinner-border text-dark"></div>
     </div>
     <div class="col-sm-1">
+      <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#myModal">Modal here!</button>
+      <div class="modal" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title"> Questions or comments? Maybe already awnsered!</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              TEXT HERE
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
