--- a/index2.html
+++ b/index2.html
@@ -113,6 +113,40 @@
   </div>
 </div>
 <br>
+
+<div class="container mt-3">
+  <div class="row">
+    <div class="col p-6">
+      <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#myModal">Modal here!</button>
+      <div class="modal" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">How to be a girlboss?</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              <ul>
+                <li>Don't care about people's opinions</li>
+                <li>Set your goals and strive to accomplish them</li>
+                <li>Take care of your mental and physical health</li>
+                <li>Dress for youself! Don't let anyone affect what makes you feel good!</li>
+                <li>Fake it till you make it!!!!!</li>
+
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br><br><br>
+
 <div class="container mt-3">
   <ul class="pagination justify-content-center">
     <li class="page-item">
@@ -132,6 +166,9 @@
     </li>
   </ul>
 </div>
+
+
+
 <script>
 function myFunction() {
   var element = document.body;
