--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="buttons" class="col p-3 bg-dark text-light">girlboss</div>
 
     <div id="buttons" class="col p-3 bg-light text=dark">
-      <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#myModal">Click here!</button>
+      <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#myModal">Modal here!</button>
       <div class="modal" id="myModal">
         <div class="modal-dialog">
           <div class="modal-content">
