--- a/index2.html
+++ b/index2.html
@@ -77,8 +77,9 @@
 </div>
 <br>
 <br>
+<br>
 <div class="container mt-3">
-  <h1 class="display-1"> Girlboss Girls</h1>
+  <h1 class="display-1" data-bs-toggle="tooltip" title="This does not include all girlbosses!" data-bs-placement="bottom"> Girlboss Girls</h1>
   <div class="row">
     <div class="col p-3">
       <div class="card" style="width:400px">
@@ -126,13 +127,16 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-              <ul>
+              <ul class="modaltext">
                 <li>Don't care about people's opinions</li>
                 <li>Set your goals and strive to accomplish them</li>
                 <li>Take care of your mental and physical health</li>
                 <li>Dress for youself! Don't let anyone affect what makes you feel good!</li>
+                <li>Dream big and dont let anyone tell you that you can't!</li>
                 <li>Fake it till you make it!!!!!</li>
-
+                <li>Celebrate the small stuff</li>
+                <li>Be proud of who you are</li>
+                <li>Hustle and work hard</li>
               </ul>
             </div>
             <div class="modal-footer">
@@ -174,6 +178,12 @@ function myFunction() {
   var element = document.body;
   element.classList.toggle("dark-mode");
 }
+
+var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl)
+})
+
 </script>
 </body>
 </html>
