fixed carousel sizes and dimentions

--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images\ocean.jpg" alt="Ocean picture" class="d-block" style="width:100%">
+            <img id="romans" src="images\ocean.jpg" alt="Ocean picture" class="d-block" style="width:100%">
             <div class="carousel-caption">
               <h3> Beachy pictures!</h3>
               <p> If a city does not sound like a good place to go, try a beachy scene!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images\palm.jpg" alt="palm" class="d-block" style="width:100%">
+            <img id="romans" src="images\palm.jpg" alt="palm" class="d-block" style="width:100%">
             <div class="carousel-caption">
               <h3> Nice Palm Trees!</h3>
               <p> Under the pretty paml tress and cool breeze!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images\sunset.jpg" alt="sunset" class="d-block" style="width:100%">
+            <img id="romans" src="images\sunset.jpg" alt="sunset" class="d-block" style="width:100%">
             <div class="carousel-caption">
               <h3> Sunet at the Beach!</h3>
               <p> Watching the sunset can be so relaxing!</p>
