--- a/index1.html
+++ b/index1.html
@@ -47,13 +47,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images\rome.jpg" alt="map" class="d-block" style="width:100%">
+        <img id="romans" src="images\rome.jpg" alt="map" class="d-block" style="width:100%">
       </div>
       <div class="carousel-item">
         <img src="images\empire.jpg" alt="building" class="d-block" style="width:100%">
       </div>
       <div class="carousel-item">
-        <img src="images\army.jpg" alt="roman army" class="d-block" style="width:100%">
+        <img id="romans" src="images\army.jpg" alt="roman army" class="d-block" style="width:100%">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
