--- a/index2.html
+++ b/index2.html
@@ -55,16 +55,16 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images\girl.jpg" alt="girlboss" class="d-block" style="width:100%">
+        <img id="romans" src="images\girl.jpg" alt="girlboss" class="d-block" style="width:100%">
       </div>
       <div class="carousel-item">
-        <img src="images\boss.jpg" alt="bosses" class="d-block" style="width:100%">
+        <img id="romans" src="images\boss.jpg" alt="bosses" class="d-block" style="width:100%">
       </div>
       <div class="carousel-item">
-        <img src="images\cover.jpg" alt="magazine cover" class="d-block" id="cover" style="width:100%">
+        <img id="romans" src="images\cover.jpg" alt="magazine cover" class="d-block" id="cover" style="width:100%">
       </div>
       <div class="carousel-item">
-        <img src="images\ggg.jpg" alt="the 3 gs" class="d-block" style="width:100%">
+        <img id="romans" src="images\ggg.jpg" alt="the 3 gs" class="d-block" style="width:100%">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
