--- a/index2.html
+++ b/index2.html
@@ -146,6 +146,9 @@
         </div>
       </div>
     </div>
+    <div class="col p-3">
+      <button type="button" class="btn btn-dark" data-bs-toggle="popover" title="#Girlboss" data-bs-content="The books is by Sophia Amoruso and ws published in 2014 ">"#Girlboss", the book</button>
+    </div>
   </div>
 </div>
 
@@ -183,7 +186,10 @@ var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggl
 var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
   return new bootstrap.Tooltip(tooltipTriggerEl)
 })
-
+var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})
 </script>
 </body>
 </html>
