--- a/index2.html
+++ b/index2.html
@@ -152,8 +152,21 @@
   </div>
 </div>
 
-<br><br><br>
 
+<br><br><br>
+<div class="container mt-3">
+  <div class="toast show">
+   <div class="toast-header">
+     <strong class="me-auto">SLAYYYYYYYYY</strong>
+     <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+   </div>
+   <div class="toast-body">
+     <p>Slay means to do something extraordinarily well. So, if someone gets a good grade, you say "slayyyyy".</p>
+   </div>
+ </div>
+</div>
+
+<br><br>
 <div class="container mt-3">
   <ul class="pagination justify-content-center">
     <li class="page-item">
