--- a/index1.html
+++ b/index1.html
@@ -26,6 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="index2.html">About Me</a>
               </li>
+              <li>
+                <a class="nav-link" href="index3.html">More Information</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="Type Here">
