--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,9 @@
                 <a class="nav-link active" href="index2.html">About Me</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="index3.html"> More Information</a>
+              </li>
+              <li class="nav-item">
                 <div class="container mt-3">
                   <div class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked onclick="myFunction()">
