tried creating the offcanvas button

--- a/index3.html
+++ b/index3.html
@@ -24,6 +24,21 @@
       </div>
     </nav>
 
+    <div class="offcanvas offcanvas-start" id="demo">
+      <div class="offcanvas-header">
+        <h1 class="offcanvas-title">Heading</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+      </div>
+      <div class="offcanvas-body">
+        <p>Some text lorem ipsum.</p>
+        <p>Some text lorem ipsum.</p>
+        <p>Some text lorem ipsum.</p>
+        <button class="btn btn-dark" type="button">Click here to return to orginial page</button>
+      </div>
+    </div>
+    <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+      Open Offcanvas Sidebar
+    </button>
 
     <div id="section1" class="container-fluid bg-infromation text-white" style="padding:100px 20px;">
       <h1></h1>
